--- a/javabeen.css
+++ b/javabeen.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Hind', sans-serif;
   width: 100%;
   height: 100vh;
   background: linear-gradient(
