--- a/javabeen.css
+++ b/javabeen.css
@@ -5,7 +5,8 @@ body {
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background-image: url(homeimage.jpeg);
+  background-image: url(homeimage.png);
+  background-size: cover;
 }
 
 *{
@@ -13,7 +14,13 @@ body {
     margin: 0;
 }
 
-.container {
+.containerHome {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.footerContainer{
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -57,12 +64,13 @@ footer {
   text-align: center;
   padding: 10px;
   width: 100%;
-  height: 100vh;
 }
 
 .shake {
   animation: shake 2s;
 }
+
+/* Shake Animation for Home Order */
 
 @keyframes shake {
   0% { transform: translateX(0); }
@@ -72,3 +80,70 @@ footer {
   80% { transform: translateX(10px); }
   100% { transform: translateX(0); }
 }
+
+/* Contact Us Page Begins */
+
+.formContact{
+  width: 400px;
+  margin-right: 20px;
+  float: right;
+}
+
+.containerContact {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.containerContact form {
+  color: #888888;
+  text-align: left;
+  padding-top: 20px;
+}
+
+.containerContact label {
+  display: none;
+}
+
+.containerContact input,
+.containerContact textarea {
+  /* to create space for placing icon*/
+  padding-left: 32px;
+  border-radius: 0px;
+}
+
+.containerContact .btn-default {
+  margin-top: 5px;
+  margin-bottom: 30px;
+  padding: 15px 36px;
+  background-color: #491000;
+  border-radius: 0px;
+  border: 0px;
+  color: #F1F1F1;
+}
+
+.containerContact .btn-default:hover,
+.containerContact .btn-default:focus {
+  background-color: #049DDF;
+  color: #F1F1F1;
+  border-color: transparent;
+  outline: 0px auto -webkit-focus-ring-color;
+}
+
+/*position should be relative and z-index greater than one*/
+.containerContact .icon {
+  position: relative;
+  float: left;
+  margin-left: 8px;
+  margin-top: -24px;
+  z-index: 2;
+}
+
+.containerContact .icon-textarea {
+  float: left;
+  margin-left: 8px;
+  margin-top: -104px;
+  position: relative;
+  z-index: 2;
+}
+/* Contact Us Page Ends */
