--- a/javabeen.css
+++ b/javabeen.css
@@ -1,4 +1,4 @@
-body {
+.standardbody {
   margin: 0;
   padding: 0;
   font-family: 'Hind', sans-serif;
@@ -7,6 +7,7 @@ body {
   overflow: hidden;
   background-image: url(homeimage.png);
   background-size: cover;
+  font-size: 1.5rem;
 }
 
 *{
@@ -20,7 +21,7 @@ body {
   min-height: 100vh;
 }
 
-.footerContainer{
+#footerContainer{
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -50,6 +51,11 @@ nav ul li a {
   text-decoration: none;
 }
 
+.navbar-toggler:not(:disabled):not(.disabled) {
+  cursor: pointer;
+  background-color: lightgray;
+}
+
 section {
   flex-grow: 1;
   padding: 20px;
@@ -73,8 +79,6 @@ footer {
 .formRedBorder{
    border: 2px solid red; 
 }
-
-/* Shake Animation for Home Order */
 
 @keyframes shake {
   0% { transform: translateX(0); }
@@ -111,7 +115,7 @@ footer {
 
 .containerContact input,
 .containerContact textarea {
-  /* to create space for placing icon*/
+
   padding-left: 32px;
   border-radius: 0px;
 }
@@ -134,7 +138,6 @@ footer {
   outline: 0px auto -webkit-focus-ring-color;
 }
 
-/*position should be relative and z-index greater than one*/
 .containerContact .icon {
   position: relative;
   float: left;
@@ -152,3 +155,83 @@ footer {
 }
 
 /* Contact Us Page Ends */
+
+/* Location Page Begins */
+
+#locationlabel{
+  color: #491000;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  gap: 10px;
+  padding: 10px;
+}
+
+.locationDescription{
+  background-color: #c1a994;
+  color: #666262;
+  max-width: 400px;
+}
+
+#locationpagetext{
+  max-width: 600px;
+}
+/* Location Page Ends */
+
+/* Menu Page Begins */
+
+#gridMenu {
+  -ms-flex: 25%; /* IE10 */
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+
+.gridMenu img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+
+/* Menu Page Ends */
+
+/* About Page Begins */
+
+#aboutpageimage {
+grid-column: 2;
+grid-row: 1/3;
+}
+
+#aboutpagecompany{
+  grid-row: 1;
+  grid-column: 3;
+  max-width: 70%;
+}
+
+#aboutpagehistory{
+  grid-row: 2;
+  grid-column: 3;
+  max-width: 70%;
+}
+.grid-containerabout{
+  display: grid;
+  column-gap: 10px;
+  padding: 10px;
+}
+
+/* About Page Ends */
+
+/* Shop Page Begins */
+.bodyshop{
+  margin: 0;
+  padding: 0;
+  font-family: 'Hind', sans-serif;
+  width: 100%;
+  height: 100vh;
+  background-image: url(homeimage.png);
+  background-size: cover;
+}
+
+/* Shop Page Begins */
