--- a/javabeen.css
+++ b/javabeen.css
@@ -4,13 +4,22 @@
   font-family: 'Hind', sans-serif;
   width: 100%;
   height: 100vh;
+  background-repeat: no-repeat;
   background-size: cover;
+  overflow: auto;
   font-size: 1.5rem;
 }
 
 *{
     padding: 0;
     margin: 0;
+}
+
+.logo-image{
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  margin-top: -6px;
 }
 
 .containerHome {
